@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.76">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.77">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,9 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.76 [20230522]:
-- Improved Skip Intro incase Aniskip Fails
-- Made Nyaa easier to understand
+Changelog 0.3.77 [20230528]:
+- Added Animepahe Scraper
     </news>
   </extension>
 </addon>
